tests/fixtures/invalid/index_label_equality.gcl
// Error: named index loop variables are matched, not compared as values.
index Maneuver = { A, B };

node x: Bool[Maneuver] = for m: Maneuver { m == m };
